# py_web_module_7_hw

./: .gitignore  README.md  main.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 29da5a3355c4_rebuild_models2.py  b77ceb0b0a27_init.py  edf7e3af1226_rebuild_models.py
conf/: db.py  models.py
seeds/: fill_grades.py  fill_groups.py  fill_students.py  fill_subjects.py  fill_teachers.py
